--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,5 +5,16 @@ authors = ["Mikazuki <mikazuki_fuyuno@outlook.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "arteria"
+path = "src/main.rs"
 
 [dependencies]
+actix-web = "2"
+actix-rt= "1"
+bollard = "0.4"
+env_logger = "0.6"
+futures = "0.3"
+serde = "1"
+serde_json = "1"
+tokio = { version = "0.2", features = ["full"]}
