--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,8 +13,12 @@ path = "src/main.rs"
 actix-web = "2"
 actix-rt= "1"
 bollard = "0.4"
+diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
+dotenv = "0.9"
 env_logger = "0.6"
 futures = "0.3"
+secstr = "0.4"
 serde = "1"
 serde_json = "1"
-tokio = { version = "0.2", features = ["full"]}
+tokio = { version = "0.2", features = ["full"] }
+uuid = { version = "0.8", features = ["serde", "v4"] }
