--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,10 +13,12 @@ path = "src/main.rs"
 actix-web = "2"
 actix-rt= "1"
 bollard = "0.4"
-diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
+diesel = { version = "1.4", features = ["mysql", "r2d2"] }
+diesel-derive-enum = { version = "0.4", features = ["mysql"] }
 dotenv = "0.9"
 env_logger = "0.6"
 futures = "0.3"
+harsh = "0.1"
 secstr = "0.4"
 serde = "1"
 serde_json = "1"
