feat(frontend): create root component

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -2,6 +2,7 @@
   "extends": [
     // prettier-ignore
     "airbnb",
+    "plugin:jest/recommended",
     "plugin:import/typescript",
     "plugin:prettier/recommended"
   ],
