chore(backend): add dependencies

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,10 +18,12 @@ actix-web-actors = "2"
 bollard = "0.4"
 diesel = { version = "1.4", features = ["mysql", "r2d2"] }
 diesel-derive-enum = { version = "0.4", features = ["mysql"] }
+dirs = "2"
 dotenv = "0.9"
 env_logger = "0.6"
 futures = "0.3"
 harsh = "0.1"
+num_cpus = "1"
 rand = "0.6"
 secstr = "0.4"
 serde = "1"
