--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -54,5 +54,15 @@
       }
     ],
     "react/prop-types": ["off"]
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true
+      }
+    }
   }
 }
