--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,13 @@
   "license": "AGPL-3.0",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --content-base public/ --watch-content-base --hot --open",
+    "start": "webpack-dev-server --config webpack.config.js --content-base public/ --watch-content-base --hot --history-api-fallback --open",
     "build": "webpack --config webpack.config.js --mode production",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@mika-f/monaka": "^0.1.0",
+    "@mika-f/monaka": "^0.1.1",
     "@monaco-editor/react": "^3.1.2",
     "i18next": "^19.3.3",
     "i18next-browser-languagedetector": "^4.0.2",
