--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/parser": "^2.24.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.0",
