--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@mika-f/monaka": "^0.1.1",
+    "@mika-f/monaka": "^0.2.1",
     "@monaco-editor/react": "^3.1.2",
     "i18next": "^19.3.3",
     "i18next-browser-languagedetector": "^4.0.2",
@@ -70,5 +70,8 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "resolutions": {
+    "path-browserify": "^1.0.0"
   }
 }
