feat(backend): support CORS

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -5,3 +5,11 @@ ARTERIA_DATABASE_USER=root
 ARTERIA_DATABASE_PASS=''
 ARTERIA_DATABASE_PORT=3306
 ARTERIA_HASH_SALT=Ak1ogHq3frf_q
+ARTERIA_CORS_ALLOWED_HOST=http://localhost:8080
+ARTERIA_CONTAINER_CONCURRENCY=16
+ARTERIA_CONTAINER_EXECUTOR_LIMIT=250000000
+ARTERIA_CONTAINER_EXECUTOR_MEMORY_LIMIT=128000000
+ARTERIA_CONTAINER_EXECUTOR_RUNTIME=
+ARTERIA_CONTAINER_EXECUTOR_TIMEOUT=10
+ARTERIA_CONTAINER_INSTALLER_CPU_LIMIT=500000000
+ARTERIA_CONTAINER_INSTALLER_MEMORY_LIMIT=256000000
