--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-helmet": "^5.2.1",
     "react-i18next": "^11.3.3",
     "react-router-dom": "^5.1.2",
+    "react-select": "^3.1.0",
     "styled-components": "^5.0.1",
     "use-http": "^0.3.8"
   },
@@ -38,6 +39,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-select": "^3.0.11",
     "@types/styled-components": "^5.0.1",
     "@types/webpack": "^4.41.10",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
