--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@mika-f/monaka": "^0.2.1",
+    "@mika-f/monaka": "^0.3.0",
     "@monaco-editor/react": "^3.1.2",
     "i18next": "^19.3.3",
     "i18next-browser-languagedetector": "^4.0.2",
@@ -26,6 +26,7 @@
     "react-i18next": "^11.3.3",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.1.0",
+    "react-transition-group": "^4.3.0",
     "styled-components": "^5.0.1",
     "use-http": "^0.3.8"
   },
@@ -40,6 +41,7 @@
     "@types/react-helmet": "^5.0.15",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.11",
+    "@types/react-transition-group": "^4.2.4",
     "@types/styled-components": "^5.0.1",
     "@types/webpack": "^4.41.10",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
