--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.1.2",
     "react-select": "^3.1.0",
     "react-transition-group": "^4.3.0",
+    "sse.js": "^0.4.4",
     "styled-components": "^5.0.1",
     "use-http": "^0.3.8"
   },
