--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -31,3 +31,4 @@ serde = "1"
 serde_json = "1"
 tokio = { version = "0.2", features = ["full"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
+users = "0.10"
